tests/_support/override/classes/error/ErrorUtils.php
<?php

namespace Thirtybees\Core\Error;

class ErrorUtils extends ErrorUtilsCore
{
}
